--- a/_config.yml
+++ b/_config.yml
@@ -16,13 +16,11 @@
 title: Scala Construct
 email: ashok@scalaconstruct.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Scalaconstruct.com is all about building blocks of scala, it focuses on practical usage of scala with examples and code snippets.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: ashokwaghmare_
+github_username:  ashokwaghmare
 
 # Build settings
 markdown: kramdown
